--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 <!-- Contact -->
 <section id="contact">
-    <div style="height:700px" class="container">
+    <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <br>
