--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#page-top">CODEDCO<sup>TM</sup></a>
-        </li>
-        <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#page-top">Home</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#services">Principles</a>
-        </li>
-        <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#portfolio">Services</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#contact">Contact</a>
+          <a class="js-scroll-trigger" href="#team">Team</a>
+        </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#calendly">Appointments</a>
+        </li>
+        <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#payment">Payment</a>
         </li>
       </ul>
     </nav>
@@ -66,7 +66,7 @@
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
         <img src="img/CODEDCO-logo.png" alt="CODEDCO" width="80%">
-        <h3 style="color:white;font-size:xx-large" class="mb-5">code + education * consulting</h3>
+        <h3 style="color:white;font-size:xx-large" class="mb-5">(code + education) * consulting</h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
       </div>
       <div class="overlay"></div>
@@ -188,7 +188,7 @@
             <div class="col-lg-12 text-center">
               <br>
               <h2 class="section-heading text-uppercase">The Team</h2>
-              <h3 class="section-subheading text-muted">coders + educators * consulting</h3>
+              <h3 class="section-subheading text-muted">(coders + educators) * consulting</h3>
             </div>
           </div>
           <div class="row">
@@ -283,7 +283,7 @@
   </section>
 
       <!-- Callout -->
-      <section class="callout">
+      <section class="callout" id="calendly">
         <div class="container text-center">
           <h3 style="color:rgb(77, 75, 75)" class="mx-auto mb-5">Schedule an Initial Consultation</h3>
           <iframe src="https://calendly.com/brian_alika/" style="width:100%; height:650px;" frameBorder="0" scrolling="yes"></iframe>
@@ -292,7 +292,7 @@
 
     <!-- Footer -->
     <footer class="footer text-center">
-      <div class="container">
+      <div class="container" id="payment">
         <h3>Need to make a payment?</h3>
         <h4 style="color:rgb(240, 175, 11)">CODEDCO<sup style="font-size:small">TM</sup> accepts payments through PayPal.</h4>
         <br>
