Linked Domain to @codedco Email Address

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       </script>
       <!--End of Zendesk Chat Script-->
 
+    <!--Google Email Domain Linkage-->
+    <meta name="google-site-verification" content="bivfTjuF_axXQ_4D4Ao55Ms0IR8wbEJGb-o33ZPP9ek" />
+
   </head>
 
   <body id="page-top">
