--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>CODEDCO<sup style="font-size:x-small">TM</sup> is an instructional technology consultancy.</h2>
+            <h2>CODEDCO<sup style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size:medium";>&trade;</sup> is an instructional technology consultancy.</h2>
             <p class="lead mb-5">We are coders & educators who team up to create powerful learning experiences.</p>
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What Makes Us Different?</a>
           </div>
@@ -192,13 +192,14 @@
               <br>
               <h2 class="section-heading text-uppercase">The Team</h2>
               <h3 class="section-subheading text-muted">(coders + educators) * consulting</h3>
+              <br>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-3">
               <div class="team-member">
-                <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+                <img style="height:150px;width:150px;" class="mx-auto rounded-circle" src="img/team/1.jpg" alt="Brian">
                 <h4>Brian Clark</h4>
                 <p class="text-muted">Founder & Director</p>
                 <ul class="list-inline social-buttons">
@@ -212,7 +213,7 @@
             </div>
             <div class="col-sm-3">
               <div class="team-member">
-                <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+                <img style="height:150px;width:150px;" class="mx-auto rounded-circle" src="img/team/2.jpg" alt="Kim">
                 <h4>Kim Schlesinger</h4>
                 <p class="text-muted">Principal</p>
                 <ul class="list-inline social-buttons">
@@ -229,13 +230,13 @@
           <div class="row">
             <div class="col-lg-8 mx-auto text-center">
               <p class="large text-muted">CODEDCO<sup style="font-size:x-small">TM</sup> prides itself in sourcing Partners who have a strong track record of success in the field of education & posssess web development background. That means, we understand the needs of teachers and students. We then make the magic happen through technology.</p>
+              <a href="mailto:contact@codedco.co">e-mail: contact@codedco.co</a>
+              <br>
               <br>
             </div>
           </div>
         </div>
       </section>
-
-
 
 <!-- Contact -->
 <section id="contact">
@@ -302,10 +303,10 @@
         <ul class="list-inline mb-5">
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
               <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="KDYLCEBA7KY7E">
+              <input type="hidden" name="hosted_button_id" value="SNPEPM92HHGJE">
               <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
               <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-              </form>              
+              </form>                           
         </ul>
         <p class="text-muted small mb-0">Copyright &copy; CODEDCO<sup style="font-size:xx-small">TM</sup> </p>
       </div>
