--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <title>CODEDCO&trade;</title>
 
+    <link rel="icon" href="img/CODEDCO-icon.png">
+
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -238,56 +240,8 @@
         </div>
       </section>
 
-<!-- Contact -->
-<section id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <br>
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h4 class="section-subheading text-muted">Have an inquiry? Please feel free to send us a message.</h4>
-          <br>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <form id="contactForm" name="sentMessage" novalidate="novalidate">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
-                <div id="success"></div>
-                <button id="sendButton" class="btn btn-primary btn-xl text-uppercase">Send Message</button>
-                <br>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
-
-      <!-- Callout -->
-      <section class="callout" id="calendly">
+    <!-- Callout -->
+    <section class="callout" id="calendly">
         <div class="container text-center">
           <h3 style="color:rgb(77, 75, 75)" class="mx-auto mb-5">Schedule an Initial Consultation</h3>
           <iframe src="https://calendly.com/brian_alika/" style="width:100%; height:650px;" frameBorder="0" scrolling="yes"></iframe>
