--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
             <div class="col-sm-3"></div>
             <div class="col-sm-3">
               <div class="team-member">
-                <img style="height:150px;width:150px;" class="mx-auto rounded-circle" src="img/team/1.jpg" alt="Brian">
-                <h4>Brian Clark</h4>
+                <img style="height:150px;width:150px;" class="mx-auto rounded-circle" src="img/team/1.jpg" alt="Ruiz">
+                <h4>Ruiz Clark</h4>
                 <p class="text-muted">Founder & Director</p>
                 <ul class="list-inline social-buttons">
                   <li class="list-inline-item">
-                    <a href="https://www.linkedin.com/in/brianalika/">
+                    <a href="https://www.linkedin.com/in/brianruizclark/">
                       <i class="fab fa-linkedin-in"></i>
                     </a>
                   </li>
