--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <section class="callout" id="calendly">
         <div class="container text-center">
           <h3 style="color:rgb(77, 75, 75)" class="mx-auto mb-5">Schedule an Initial Consultation</h3>
-          <iframe src="https://calendly.com/brian_alika/" style="width:100%; height:650px;" frameBorder="0" scrolling="yes"></iframe>
+          <iframe src="https://calendly.com/ruiz_clark/" style="width:100%; height:650px;" frameBorder="0" scrolling="yes"></iframe>
         </div>
       </section>
 
